@@ -100,6 +100,13 @@ detectDE
 
 
 
+if [ x"$DE" = x"" ]; then
+    XSU=`which xsu 2>/dev/null`
+    if [ $? -eq 0 ] ; then
+        DE=generic
+    fi
+fi
+
 case "$DE" in
     kde)
     su_kde "$@"
